...

    <francisco.visintini.mercadolibre.test.search.bar.SearchBar
        android:id="@+id/view_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/view_search_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <!--  TODO Improve this with an includes of a layout that represent empty results  -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_search_empty_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_4"
        android:layout_marginEnd="@dimen/gap_4"
        android:text="@string/search_empty_results_text"
        android:textAppearance="@style/H2"
...
