...
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/gap_2"
    android:layout_marginBottom="@dimen/gap_2"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/view_search_result_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_4"
        android:layout_marginEnd="@dimen/gap_2"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
...
