<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/strongYellow"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/view_search_bar_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="14dp"
        android:tint="@color/darkGrey"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/view_search_bar_input_content"
        app:layout_constraintEnd_toStartOf="@id/view_search_bar_input_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_search_bar_input_content"
        app:srcCompat="@drawable/ic_arrow_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_search_bar_input_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_1"
        android:layout_marginTop="@dimen/gap_2"
        android:layout_marginEnd="@dimen/gap_3"
        android:layout_marginBottom="@dimen/gap_2"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/view_search_bar_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="@dimen/gap_3">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/view_search_bar_edit_text"
            style="@style/MLEditText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/gap_1"
            android:background="@null"
            android:hint="@string/search_bar_edit_text_hint"
            android:imeOptions="actionSearch"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view_search_bar_image_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,Autofill" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/view_search_bar_image_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="14dp"
            android:tint="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/view_search_bar_image_clear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="14dp"
            android:tint="@color/darkGrey"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_circle_cross" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
