...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_2"
        android:layout_marginBottom="@dimen/gap_2"
        android:orientation="vertical">

        <View
            android:id="@+id/view_search_result_image_placeholder"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="@dimen/gap_4"
            android:layout_marginEnd="@dimen/gap_2"
            android:background="@drawable/bg_placeholder_view"
            app:layout_constraintBottom_toBottomOf="parent"
...
